style.css
@font-face {
	font-family: "Berold";
	src: url(fonts/Berold.otf) format("opentype");
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

html,
body {
	margin: 0;
	padding: 0;
	font-size: 20px;
	font-family: Roboto, sans-serif;
	font-weight: 300;
}

.translating {
	display: none;
}

.language-switcher {
	position: fixed;
	top: 20px;
	right: 20px;
	border: none;
	outline: none;
	appearance: none;
	background-color: rgba(0, 0, 0, 0.4);
	backdrop-filter: blur(8px);
	color: #fff;
	padding: 10px;
	border-radius: 8px;
	cursor: pointer;
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
	font-size: 18px;
	line-height: 18px;
}

.language-switcher:hover {
	background-color: rgba(0, 0, 0, 0.7);
}

.language-switcher:active {
	background-color: rgba(0, 0, 0, 0.9);
}

.accordion__title:hover {
	background-color: #ddd;
}

.accordion__title:active {
	background-color: #ccc;
}

.accordion__chevron {
	transition: transform 0.2s ease-in-out;
	width: 16px;
}

.accordion__content {
	max-height: 0;
	overflow: hidden;
	transition: max-height 0.2s ease-out;
	padding: 0 15px;
	margin-top: 10px;
}

.accordion_active .accordion__content {
	transition: max-height 0.2s ease-in;
}

.accordion_active .accordion__chevron {
	transform: rotate(180deg);
}

.accordion__trigger {
	cursor: pointer;
	user-select: none;
}

.accordion__title {
	display: flex;
	justify-content: space-between;
	gap: 10px;
	align-items: center;
	background-color: #eee;
	border: 1px solid #ccc;
	border-radius: 50px;
	padding: 10px 15px;
	transition: all 0.1s;
	margin-top: -10px;
}

.section__title {
	font-weight: 500;
	margin: 0;
	margin-bottom: 40px;
	font-size: 50px;
	text-align: center;
}

.section__title:after {
	content: "";
	display: block;
	width: 100px;
	height: 2px;
	background-color: #000000;
	margin: 20px auto;
}

.container {
	max-width: 1500px;
	margin: 0 auto;
	padding: 50px 20px;
}

.logo {
	width: 100px;
}

.hero {
	display: grid;
	grid-template-columns: 1fr 2fr;
	background-color: #2d2518;
	background-image: url(https://ks-design-interior.github.io/images/work/11/7.jpeg);
	background-size: cover;
	color: #ffffff;
}

.header {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	backdrop-filter: blur(15px);
	padding-top: 50px;
}

.navbar {
	margin-top: 50px;
}

.navbar__menu {
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	gap: 50px;
	text-transform: uppercase;
	text-align: center;
}

.navbar__menu-link {
	color: #ffffff;
	text-decoration: none;
	display: inline-block;
}

.navbar__menu-link:hover {
	text-decoration: underline;
}

.navbar__menu-link:active {
	filter: brightness(0.8);
}

.hero__container {
	height: 100vh;
	min-height: 600px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.hero__tagline {
	display: flex;
	flex-direction: column;
	font-size: 80px;
	font-family: Berold;
	font-weight: 300;
	line-height: 100px;
}

.about__container {
	padding-top: 50px;
}

.about__content {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 25px;
}

.about__image {
	filter: brightness(0.7);
}

.about__text {
	padding: 20px;
	height: 600px;
	width: 500px;
	background-color: #dbdbdb;
}

.about__image,
.about__text {
	border-radius: 10px;
}

.project-creation__steps {
	display: flex;
	flex-direction: column;
	gap: 20px;
	list-style-type: none;
}

.project-creation__step-title {
	font-weight: 500;
	margin: 0;
}

.project-creation__step-content {
	white-space: pre-line;
	line-height: 1.5;
	margin: 0;
}

.project-creation__step:first-of-type .accordion__title {
	margin-top: 0;
}

.portfolio__cards {
	display: flex;
	flex-wrap: wrap;
	gap: 20px;
	list-style-type: none;
	margin: 0;
	padding: 0;
	align-items: center;
	justify-content: center;
}

.portfolio__card {
	border-radius: 8px;
	overflow: hidden;
	position: relative;
	width: 400px;
	height: 300px;
}

.portfolio__card-image {
	object-fit: cover;
	width: 100%;
	height: 100%;
	
}

.portfolio__card-description {
	display: flex;
	flex-direction: column;
	justify-content: center;
	position: absolute;
	bottom: 0;
	background: rgba(0, 0, 0, 0.4);
	backdrop-filter: blur(10px);
	color: #ffffff;
	padding: 10px;
	width: 100%;
	min-height: 100px;
	text-align: center;
	padding: 15px;
}

.portfolio__card-title {
	font-weight: 500;
	margin: 0;
	font-size: 17px;
}

.portfolio__card-text {
	margin: 0;
	height: 25px;
	font-size: 15px;
}

